Fixed vendor spacing

--- a/profiles/smash/themes/custom/smash2013/sass/nodes.scss
+++ b/profiles/smash/themes/custom/smash2013/sass/nodes.scss
@@ -360,7 +360,7 @@
   position: relative;
   min-height: 80px;
 
-  margin: 1em 0;
+  margin: 1.5em 0;
 
   .vendor-left {
     text-align: center;
